test/runnable/nortti_bc.d
/**
 * EXTRA_SOURCES: imports/nortti.d
 * REQUIRED_ARGS: -betterC
 */

// Real test is in imports/nortti.d
import nortti;

int main()
{
    return testNORTTI();
}
